Fix styling on rating page on safari (and thus iPhone)

--- a/ratings/static/css/main-rating.css
+++ b/ratings/static/css/main-rating.css
@@ -2,7 +2,7 @@ body {
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     margin: 0px;
     text-align: center;
-    font-size: 24px;
+    height: 100vh;
 }
 
 p {
@@ -22,16 +22,12 @@ div.header {
     position: relative;
 }
 
-div.header div, div.rating p {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
+div.rating p {
+    padding-top: 0.5em;
 }
 
 div.rating {
-    height: 30%;
+    height: 28%;
     width: 100%;
     margin: 0px;
     position: relative;
@@ -66,3 +62,4 @@ a.breadcrumb {
     font-size: 0.6em;
     padding: 0px 20px;
 }
+
